# music-discovery

./: .gitignore  ROADMAP.md  listen_import.py  pyproject.toml
docs/: discovery-guide.md  playlist-guide.md
music_discovery/: discover.py  listen_import.py  playlist.py
music_discovery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
